<resources>
    <string name="app_name">WanAndroid</string>
    <string name="article_detail_format">%1$s&#160;来自&#160;%2$s</string>
    <string name="loading">加载中&#8230;</string>
    <string name="no_more">已经到底了哦</string>
    <string name="load_more_error">加载好像出问题了</string>
    <string name="refresh">刷新</string>
    <string name="share">分享</string>
    <string name="copy_link">复制链接</string>
    <string name="copy_link_success">已复制链接</string>
    <string name="default_browser">使用系统浏览器打开</string>
    <string name="action_share">分享</string>
    <string name="search">搜索</string>
    <string name="classify">分类</string>
    <string name="search_hint">关键词使用空格隔开</string>
    <string name="hot_search_hint">大家都在搜</string>
    <string name="search_key_error">输入条件好像错了哦</string>
    <string name="search_error">
        <Data>
          <![CDATA[未找到与<font color="#f0717e">%1$s</font>相关的内容]]>
        </Data>
    </string>

    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="repassword">重复密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_tip">没有账户，去注册</string>
    <string name="login_tip">已有账户，去登录</string>
    <string name="user_name_empty">用户名为空</string>
    <string name="psw_empty">密码为空</string>
    <string name="pwd_unequals">密码不一致</string>
    <string name="user_name_too_short">用户名过短</string>
    <string name="login_fail">登录失败</string>
    <string name="register_fail">注册失败</string>
    <string name="collect_fail">收藏失败</string>
    <string name="uncollect_fail">取消收藏失败</string>
    <string name="home">首页</string>
    <string name="quit_login">注销</string>
    <string name="setting">设置</string>
    <string name="about_me">关于</string>
    <string name="unlogin">未登录</string>
    <string name="cid">知识体系</string>
    <string name="prompt">提示</string>
    <string name="are_you_sure_quit_login">是否退出登录?</string>
    <string name="confirm">确定</string>
    <string name="collect">收藏</string>
    <string name="unlogin_tip">已经退出登录</string>
    <string name="login_or_register">登录或注册</string>
    <string name="default_welcome_string">致喧嚣世界中的技术人</string>
    <string name="about_the_project">关于本项目\n</string>
    <string name="about_me_tip">玩安卓的非官方客户端,数据均来源于HongYang建立的 www.wanandroid.com.\n\n本项目主要用于学习讨论,技术交流。如果本项目导致您的合法权益受到侵害,请及时与我联系.\n\n本项目完全开源于Github,源码地址为 www.github.com/CB2Git/WanAndroid 如果您在使用过程中发现不满意或者程序工作异常的情况，您可以提出Issue或者为本项目贡献出您的一份力量,我在看到后会第一时间处理.</string>
    <string name="collect_success">已取消收藏</string>
    <string name="collect_successed">已添加收藏</string>
    <string name="login_success">登录成功</string>
    <string name="register_success">注册成功</string>
    <string name="feedback">反馈</string>
    <string name="qq_is_no_exist">您的设备未安装QQ,无法反馈</string>
    <string name="open_qq_error">打开临时会话失败</string>
    <string name="temp_chat_tip">即将为您打开QQ进行临时会话,如果无法发送消息可以选择添加我为好友</string>
    <string name="double_click_back_exit">再按一下返回键退出应用</string>
    <string name="auto_login_error">自动登录失败</string>
</resources>
