<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_home"
            android:icon="@mipmap/ic_home"
            android:title="@string/home"/>

        <item
            android:id="@+id/action_collect_list"
            android:icon="@mipmap/ic_uncollect"
            android:title="@string/collect"/>
    </group>


    <group android:id="@+id/group_one">
        <item
            android:id="@+id/action_quit_login"
            android:icon="@mipmap/ic_quit_login"
            android:title="@string/quit_login"/>
        <item
            android:id="@+id/action_setting"
            android:icon="@mipmap/ic_setting"
            android:title="@string/setting"
            android:visible="false"/>
        <item
            android:id="@+id/action_about_me"
            android:icon="@mipmap/ic_about"
            android:title="@string/about_me"/>
    </group>


</menu>